--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,11 +2,12 @@
     <span>DigitAllOcean</span>
     <span class="spacer"></span>
     <mat-menu #appMenu="matMenu">
-      <button mat-menu-item (click)="changeLanguage('en')">{{ 'en' | translate }}</button>
-      <button mat-menu-item (click)="changeLanguage('fr')">{{ 'fr' | translate }}</button>
-      <button mat-menu-item (click)="changeLanguage('pt')">{{ 'pt' | translate }}</button>
+      <button mat-menu-item class="mat-menu-item" (click)="changeLanguage('en')">{{ 'en' | translate }}</button>
+      <button mat-menu-item class="mat-menu-item" (click)="changeLanguage('fr')">{{ 'fr' | translate }}</button>
+      <button mat-menu-item class="mat-menu-item" (click)="changeLanguage('pt')">{{ 'pt' | translate }}</button>
     </mat-menu>
-    <button mat-icon-button [matMenuTriggerFor]="appMenu">
+    <span>{{ 'language' | translate }}</span>
+    <button mat-icon-button class="mat-icon-button" [matMenuTriggerFor]="appMenu">
       <mat-icon>language</mat-icon>
     </button>
 </mat-toolbar>
