--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container class="example-container">
+<mat-sidenav-container class="container">
   <mat-sidenav-content>
     <app-navbar></app-navbar>
     <div class="main-content">
