--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,25 +1,20 @@
+mat-toolbar {
+  background-color: #1c2833;
+}
+
 .spacer {
-    flex: 1 1 auto;
-  }
-  
-  mat-toolbar {
-    background-color: #1c2833;
-  }
-  
-  .mat-menu-panel {
-    background-color: #1c2833;
-    border: none;
-  }
-  
-  .mat-menu-item {
-    color: #ecf0f1;
-  }
-  
-  .mat-menu-item:hover {
-    background-color: #34495e;
-    color: #1abc9c;
-  }
-  
-  button.mat-icon-button:hover mat-icon {
-    color: #1abc9c;
-  }
+  flex: 1 1 auto;
+}
+
+.mat-menu-item {
+  color: #000000;
+}
+
+.mat-menu-item:hover {
+  background-color: #34495e;
+  color: #1abc9c;
+}
+
+button.mat-icon-button:hover mat-icon {
+  color: #1abc9c;
+}
