--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <!-- Sidebar -->
-<mat-sidenav-container class="example-container">
-    <mat-sidenav mode="side" opened class="example-sidenav">
+<mat-sidenav-container class="container">
+    <mat-sidenav mode="side" opened class="sidenav">
       <mat-nav-list>
         <mat-list-item>
           <button mat-button routerLink="/home">
