--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -1,12 +1,12 @@
-.example-container {
+.container {
     height: 100vh;
   }
   
-  .example-sidenav {
+  .sidenav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 240px;
+    width: 100%;
     background-color: #2c3e50;
     color: white;
     padding-top: 20px;
@@ -14,12 +14,15 @@
   }
   
   mat-nav-list {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     width: 100%;
     padding: 0;
   }
   
   mat-list-item {
-    width: 100%;
+    width: 90%;
     padding: 0;
     display: flex;
     justify-content: center;
@@ -33,6 +36,7 @@
     border-color: #2980b9;
     margin-top: 10px;
     margin-bottom: 10px;
+    border-radius: 10px;
   }
   
   button:hover {
