crew card page added

--- a/src/app/home/crew-list/crew-list.component.html
+++ b/src/app/home/crew-list/crew-list.component.html
@@ -65,6 +65,9 @@
         <button mat-icon-button class="delete-button" (click)="deleteCrew(crew.id)">
           <mat-icon>delete</mat-icon>
         </button>
+        <button mat-icon-button class="crew-card-button" (click)="navigateToCrewCard(crew)">
+          <mat-icon>person</mat-icon>
+        </button>
       </td>
     </ng-container>
   
