add crew modal added

--- a/src/app/home/crew-list/crew-list.component.html
+++ b/src/app/home/crew-list/crew-list.component.html
@@ -79,3 +79,5 @@
     <p> {{ 'total_income' | translate }} (USD): {{ getTotalIncomeByCurrency('USD') }}</p>
     <p> {{ 'total_income' | translate }} (EUR): {{ getTotalIncomeByCurrency('EUR') }}</p>
   </div>
+
+  <button mat-raised-button color="primary" (click)="openAddCrewModal()">Add Crew</button>
