dropdown and uuid added in add crew modal component

--- a/src/app/home/crew-list/add-crew-modal/add-crew-modal.component.html
+++ b/src/app/home/crew-list/add-crew-modal/add-crew-modal.component.html
@@ -10,27 +10,39 @@
   </mat-form-field>
   <mat-form-field appearance="fill">
     <mat-label>Nationality</mat-label>
-    <input matInput [(ngModel)]="crew.nationality">
+    <mat-select [(ngModel)]="crew.nationality">
+      <mat-option *ngFor="let nationality of nationalities" [value]="nationality">
+        {{ nationality }}
+      </mat-option>
+    </mat-select>
   </mat-form-field>
   <mat-form-field appearance="fill">
     <mat-label>Title</mat-label>
-    <input matInput [(ngModel)]="crew.title">
+    <mat-select [(ngModel)]="crew.title">
+      <mat-option *ngFor="let title of titles" [value]="title">
+        {{ title }}
+      </mat-option>
+    </mat-select>
   </mat-form-field>
   <mat-form-field appearance="fill">
     <mat-label>Days On Board</mat-label>
-    <input matInput type="number" [(ngModel)]="crew.daysOnBoard">
+    <input matInput type="number" [(ngModel)]="crew.daysOnBoard" (input)="calculateTotalIncome()">
   </mat-form-field>
   <mat-form-field appearance="fill">
     <mat-label>Daily Rate</mat-label>
-    <input matInput type="number" [(ngModel)]="crew.dailyRate">
+    <input matInput type="number" [(ngModel)]="crew.dailyRate" (input)="calculateTotalIncome()">
   </mat-form-field>
   <mat-form-field appearance="fill">
     <mat-label>Currency</mat-label>
-    <input matInput [(ngModel)]="crew.currency">
+    <mat-select [(ngModel)]="crew.currency" (selectionChange)="calculateTotalIncome()">
+      <mat-option *ngFor="let currency of currencies" [value]="currency">
+        {{ currency }}
+      </mat-option>
+    </mat-select>
   </mat-form-field>
   <mat-form-field appearance="fill">
     <mat-label>Total Income</mat-label>
-    <input matInput type="number" [(ngModel)]="crew.totalIncome">
+    <input matInput type="number" [(ngModel)]="crew.totalIncome" readonly>
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
