--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,5 @@
 <mat-toolbar color="primary">
+    <mat-icon>directions_boat</mat-icon>
     <span>DigitAllOcean</span>
     <span class="spacer"></span>
     <mat-menu #appMenu="matMenu">
