--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -47,3 +47,9 @@
   button mat-icon, button span {
     color: white;
   }
+
+  span {
+    display: flex;
+    align-items: center;
+    width: 50%;
+  }
