--- a/src/app/home/crew-list/add-crew-modal/add-crew-modal.component.html
+++ b/src/app/home/crew-list/add-crew-modal/add-crew-modal.component.html
@@ -1,51 +1,80 @@
 <h1 mat-dialog-title>Add New Crew</h1>
 <div mat-dialog-content>
-  <mat-form-field appearance="fill">
-    <mat-label>First Name</mat-label>
-    <input matInput [(ngModel)]="crew.firstName">
-  </mat-form-field>
-  <mat-form-field appearance="fill">
-    <mat-label>Last Name</mat-label>
-    <input matInput [(ngModel)]="crew.lastName">
-  </mat-form-field>
-  <mat-form-field appearance="fill">
-    <mat-label>Nationality</mat-label>
-    <mat-select [(ngModel)]="crew.nationality">
-      <mat-option *ngFor="let nationality of nationalities" [value]="nationality">
-        {{ nationality }}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
-  <mat-form-field appearance="fill">
-    <mat-label>Title</mat-label>
-    <mat-select [(ngModel)]="crew.title">
-      <mat-option *ngFor="let title of titles" [value]="title">
-        {{ title }}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
-  <mat-form-field appearance="fill">
-    <mat-label>Days On Board</mat-label>
-    <input matInput type="number" [(ngModel)]="crew.daysOnBoard" (input)="calculateTotalIncome()">
-  </mat-form-field>
-  <mat-form-field appearance="fill">
-    <mat-label>Daily Rate</mat-label>
-    <input matInput type="number" [(ngModel)]="crew.dailyRate" (input)="calculateTotalIncome()">
-  </mat-form-field>
-  <mat-form-field appearance="fill">
-    <mat-label>Currency</mat-label>
-    <mat-select [(ngModel)]="crew.currency" (selectionChange)="calculateTotalIncome()">
-      <mat-option *ngFor="let currency of currencies" [value]="currency">
-        {{ currency }}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
-  <mat-form-field appearance="fill">
-    <mat-label>Total Income</mat-label>
-    <input matInput type="number" [(ngModel)]="crew.totalIncome" readonly>
-  </mat-form-field>
+  <form [formGroup]="crewForm">
+    <mat-form-field appearance="fill">
+      <mat-label>First Name</mat-label>
+      <input matInput formControlName="firstName" required>
+      <mat-error *ngIf="crewForm.get('firstName')?.hasError('required')">
+        First Name is required
+      </mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Last Name</mat-label>
+      <input matInput formControlName="lastName" required>
+      <mat-error *ngIf="crewForm.get('lastName')?.hasError('required')">
+        Last Name is required
+      </mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Nationality</mat-label>
+      <mat-select formControlName="nationality" required>
+        <mat-option *ngFor="let nationality of nationalities" [value]="nationality">
+          {{ nationality }}
+        </mat-option>
+      </mat-select>
+      <mat-error *ngIf="crewForm.get('nationality')?.hasError('required')">
+        Nationality is required
+      </mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Title</mat-label>
+      <mat-select formControlName="title" required>
+        <mat-option *ngFor="let title of titles" [value]="title">
+          {{ title }}
+        </mat-option>
+      </mat-select>
+      <mat-error *ngIf="crewForm.get('title')?.hasError('required')">
+        Title is required
+      </mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Days On Board</mat-label>
+      <input matInput type="number" formControlName="daysOnBoard" (input)="calculateTotalIncome()" min="0" required>
+      <mat-error *ngIf="crewForm.get('daysOnBoard')?.hasError('required')">
+        Days On Board is required
+      </mat-error>
+      <mat-error *ngIf="crewForm.get('daysOnBoard')?.hasError('min')">
+        Days On Board cannot be less than 0
+      </mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Daily Rate</mat-label>
+      <input matInput type="number" formControlName="dailyRate" (input)="calculateTotalIncome()" min="0" required>
+      <mat-error *ngIf="crewForm.get('dailyRate')?.hasError('required')">
+        Daily Rate is required
+      </mat-error>
+      <mat-error *ngIf="crewForm.get('dailyRate')?.hasError('min')">
+        Daily Rate cannot be less than 0
+      </mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Currency</mat-label>
+      <mat-select formControlName="currency" (selectionChange)="calculateTotalIncome()" required>
+        <mat-option *ngFor="let currency of currencies" [value]="currency">
+          {{ currency }}
+        </mat-option>
+      </mat-select>
+      <mat-error *ngIf="crewForm.get('currency')?.hasError('required')">
+        Currency is required
+      </mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Total Income</mat-label>
+      <input matInput type="number" formControlName="totalIncome" readonly>
+    </mat-form-field>
+  </form>
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onCancel()">Cancel</button>
-  <button mat-button color="primary" (click)="onSave()">Save</button>
+  <button mat-button color="primary" (click)="onSave()" [disabled]="crewForm.invalid">Save</button>
 </div>
