--- a/src/app/home/crew-list/add-crew-modal/add-crew-modal.component.html
+++ b/src/app/home/crew-list/add-crew-modal/add-crew-modal.component.html
@@ -1,112 +1,112 @@
-<h1 mat-dialog-title>{{ isEditMode ? 'Edit Crew' : 'Add Crew' }}</h1>
+<h1 mat-dialog-title>{{ isEditMode ? ('edit_crew' | translate) : ('add_crew' | translate) }}</h1>
 <div mat-dialog-content>
   <form [formGroup]="crewForm">
     <mat-form-field appearance="fill">
-      <mat-label>First Name</mat-label>
+      <mat-label>{{ 'first_name' | translate }}</mat-label>
       <input matInput formControlName="firstName" required>
       <mat-error *ngIf="crewForm.get('firstName')?.hasError('required')">
-        First Name is required
+        {{ 'first_name_required' | translate }}
       </mat-error>
     </mat-form-field>
     <mat-form-field appearance="fill">
-      <mat-label>Last Name</mat-label>
+      <mat-label>{{ 'last_name' | translate }}</mat-label>
       <input matInput formControlName="lastName" required>
       <mat-error *ngIf="crewForm.get('lastName')?.hasError('required')">
-        Last Name is required
+        {{ 'last_name_required' | translate }}
       </mat-error>
     </mat-form-field>
     <mat-form-field appearance="fill">
-      <mat-label>Nationality</mat-label>
+      <mat-label>{{ 'nationality' | translate }}</mat-label>
       <mat-select formControlName="nationality" required>
         <mat-option *ngFor="let nationality of nationalities" [value]="nationality">
           {{ nationality }}
         </mat-option>
       </mat-select>
       <mat-error *ngIf="crewForm.get('nationality')?.hasError('required')">
-        Nationality is required
+        {{ 'nationality_required' | translate }}
       </mat-error>
     </mat-form-field>
     <mat-form-field appearance="fill">
-      <mat-label>Title</mat-label>
+      <mat-label>{{ 'title' | translate }}</mat-label>
       <mat-select formControlName="title" required>
         <mat-option *ngFor="let title of titles" [value]="title">
           {{ title }}
         </mat-option>
       </mat-select>
       <mat-error *ngIf="crewForm.get('title')?.hasError('required')">
-        Title is required
+        {{ 'title_required' | translate }}
       </mat-error>
     </mat-form-field>
     <mat-form-field appearance="fill">
-      <mat-label>Days On Board</mat-label>
+      <mat-label>{{ 'days_on_board' | translate }}</mat-label>
       <input matInput type="number" formControlName="daysOnBoard" min="0" required>
       <mat-error *ngIf="crewForm.get('daysOnBoard')?.hasError('required')">
-        Days On Board is required
+        {{ 'days_on_board_required' | translate }}
       </mat-error>
       <mat-error *ngIf="crewForm.get('daysOnBoard')?.hasError('min')">
-        Days On Board cannot be less than 0
+        {{ 'days_on_board_min' | translate }}
       </mat-error>
     </mat-form-field>
     <mat-form-field appearance="fill">
-      <mat-label>Daily Rate</mat-label>
+      <mat-label>{{ 'daily_rate' | translate }}</mat-label>
       <input matInput type="number" formControlName="dailyRate" min="0" required>
       <mat-error *ngIf="crewForm.get('dailyRate')?.hasError('required')">
-        Daily Rate is required
+        {{ 'daily_rate_required' | translate }}
       </mat-error>
       <mat-error *ngIf="crewForm.get('dailyRate')?.hasError('min')">
-        Daily Rate cannot be less than 0
+        {{ 'daily_rate_min' | translate }}
       </mat-error>
     </mat-form-field>
     <mat-form-field appearance="fill">
-      <mat-label>Currency</mat-label>
+      <mat-label>{{ 'currency' | translate }}</mat-label>
       <mat-select formControlName="currency" required>
         <mat-option *ngFor="let currency of currencies" [value]="currency">
           {{ currency }}
         </mat-option>
       </mat-select>
       <mat-error *ngIf="crewForm.get('currency')?.hasError('required')">
-        Currency is required
+        {{ 'currency_required' | translate }}
       </mat-error>
     </mat-form-field>
   </form>
 
-  <h2 mat-subheader>Add or Edit Certificate</h2>
+  <h2 mat-subheader>{{ 'add_or_edit_certificate' | translate }}</h2>
   <form [formGroup]="certificateForm">
     <mat-form-field appearance="fill">
-      <mat-label>Certificate</mat-label>
+      <mat-label>{{ 'certificate' | translate }}</mat-label>
       <mat-select formControlName="certificateId" required>
         <mat-option *ngFor="let certificate of certificates" [value]="certificate.id">
           {{ certificate.name }}
         </mat-option>
       </mat-select>
       <mat-error *ngIf="certificateForm.get('certificateId')?.hasError('required')">
-        Certificate is required
+        {{ 'certificate_required' | translate }}
       </mat-error>
     </mat-form-field>
     <mat-form-field appearance="fill">
-      <mat-label>Issue Date</mat-label>
+      <mat-label>{{ 'issue_date' | translate }}</mat-label>
       <input matInput [matDatepicker]="issueDatePicker" formControlName="issueDate" required>
       <mat-datepicker-toggle matSuffix [for]="issueDatePicker"></mat-datepicker-toggle>
       <mat-datepicker #issueDatePicker></mat-datepicker>
       <mat-error *ngIf="certificateForm.get('issueDate')?.hasError('required')">
-        Issue Date is required
+        {{ 'issue_date_required' | translate }}
       </mat-error>
     </mat-form-field>
     <mat-form-field appearance="fill">
-      <mat-label>Expiry Date</mat-label>
+      <mat-label>{{ 'expiry_date' | translate }}</mat-label>
       <input matInput [matDatepicker]="expiryDatePicker" formControlName="expiryDate" required>
       <mat-datepicker-toggle matSuffix [for]="expiryDatePicker"></mat-datepicker-toggle>
       <mat-datepicker #expiryDatePicker></mat-datepicker>
       <mat-error *ngIf="certificateForm.get('expiryDate')?.hasError('required')">
-        Expiry Date is required
+        {{ 'expiry_date_required' | translate }}
       </mat-error>
     </mat-form-field>
     <button mat-raised-button color="primary" (click)="addOrUpdateCertificate()" [disabled]="certificateForm.invalid">
-      {{ editingCertificateIndex !== null ? 'Update Certificate' : 'Add Certificate' }}
+      {{ editingCertificateIndex !== null ? ('update_certificate' | translate) : ('add_certificate' | translate) }}
     </button>
   </form>
 
-  <h2 mat-subheader>Certificates</h2>
+  <h2 mat-subheader>{{ 'certificates' | translate }}</h2>
   <mat-list>
     <mat-list-item *ngFor="let cert of tempCertificates; let i = index">
       {{ cert.certificateId }} - {{ cert.issueDate }} - {{ cert.expiryDate }}
@@ -120,6 +120,6 @@
   </mat-list>
 </div>
 <div mat-dialog-actions>
-  <button mat-button (click)="onCancel()">Cancel</button>
-  <button mat-button color="primary" (click)="onSave()" [disabled]="crewForm.invalid">Save</button>
+  <button mat-button (click)="onCancel()">{{ 'cancel' | translate }}</button>
+  <button mat-button color="primary" (click)="onSave()" [disabled]="crewForm.invalid">{{ 'save' | translate }}</button>
 </div>
