--- a/src/app/home/crew-list/confirm-delete/confirm-delete.component.html
+++ b/src/app/home/crew-list/confirm-delete/confirm-delete.component.html
@@ -1,8 +1,8 @@
-<h1 mat-dialog-title>Confirm Delete</h1>
+<h1 mat-dialog-title>{{ 'confirm_delete' | translate }}</h1>
 <div mat-dialog-content>
-  <p>Are you sure you want to delete this item?</p>
+  <p>{{ 'confirm_delete_message' | translate }}</p>
 </div>
 <div mat-dialog-actions>
-  <button mat-button (click)="onCancel()">No</button>
-  <button mat-button color="warn" (click)="onConfirm()">Yes</button>
+  <button mat-button (click)="onCancel()">{{ 'no' | translate }}</button>
+  <button mat-button color="warn" (click)="onConfirm()">{{ 'yes' | translate }}</button>
 </div>
