--- a/src/app/home/crew-list/crew-list.component.scss
+++ b/src/app/home/crew-list/crew-list.component.scss
@@ -3,41 +3,66 @@ table {
     margin: 20px 0;
   }
   
-  th.mat-header-cell {
-    background-color: #f5f5f5;
-    color: #333;
-    font-weight: bold;
-  }
-  
-  button.mat-icon-button.edit-button {
-    color: #ffeb3b;
-  }
-  
-  button.mat-icon-button.edit-button:hover {
-    background-color: rgba(255, 235, 59, 0.1);
-  }
-  
-  button.mat-icon-button.delete-button {
-    color: #f44336;
-  }
-  
-  button.mat-icon-button.delete-button:hover {
-    background-color: rgba(244, 67, 54, 0.1);
-  }
-  
-  button.mat-button.certificates-button {
-    color: #2196f3;
-  }
-  
-  button.mat-button.certificates-button:hover {
-    background-color: rgba(33, 150, 243, 0.1);
-  }
-  
   .total-income {
     margin-top: 20px;
     font-weight: bold;
+    margin: 20px;
+  }
+
+  .total-income span {
+    color: #58ff5d;
+    margin: 5px;
+  }
+
+  .total-income-cell {
+    color: rgb(0, 129, 0);
+  }
+
+  .total-income p {
+    color: white;
   }
 
   .narrow-input {
     width: 80px;
+  }
+
+  .add-crew-button {
+    background-color: #2980b9;
+    border-color: #2980b9;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 16px;
+  }
+
+  .add-crew-button:hover {
+    background-color: #1abc9c;
+    border-color: #16a085;
+  }
+
+  .certificates-button {
+    width: 180px;
+    background-color: #2980b9;
+    border-color: #2980b9;
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 16px;
+  }
+
+  .certificates-button:hover {
+    background-color: #1abc9c;
+    border-color: #16a085;
+  }
+
+  .edit-icon {
+    color: rgb(255, 196, 0);
+  }
+  
+  .delete-icon {
+    color: red;
+  }
+  
+  .crew-card-icon {
+    color: rgb(0, 140, 255);
   }
