--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,6 +1,6 @@
 :host {
     display: block;
-    min-height: 100vh; /* min-height kullanarak içeriğin tam ekran olmasını sağlıyoruz */
+    min-height: 100vh;
     background-image: url('/assets/background.jpg');
     background-size: cover;
     background-position: center;
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100%; /* min-height kullanarak içeriğin tam ekran olmasını sağlıyoruz */
+    min-height: 100%;
     color: white;
     text-align: center;
   }
