--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -7,7 +7,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    background-color: #2c3e50;
+    background-color: #15314d;
     color: white;
     padding-top: 20px;
     padding-bottom: 20px;
@@ -51,5 +51,5 @@
   span {
     display: flex;
     align-items: center;
-    width: 50%;
+    width: 100%;
   }
