--- a/src/app/home/crew-list/add-crew-modal/add-crew-modal.component.html
+++ b/src/app/home/crew-list/add-crew-modal/add-crew-modal.component.html
@@ -1,125 +1,134 @@
 <h1 mat-dialog-title>{{ isEditMode ? ('edit_crew' | translate) : ('add_crew' | translate) }}</h1>
 <div mat-dialog-content>
-  <form [formGroup]="crewForm">
-    <mat-form-field appearance="fill">
-      <mat-label>{{ 'first_name' | translate }}</mat-label>
-      <input matInput formControlName="firstName" required>
-      <mat-error *ngIf="crewForm.get('firstName')?.hasError('required')">
-        {{ 'first_name_required' | translate }}
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field appearance="fill">
-      <mat-label>{{ 'last_name' | translate }}</mat-label>
-      <input matInput formControlName="lastName" required>
-      <mat-error *ngIf="crewForm.get('lastName')?.hasError('required')">
-        {{ 'last_name_required' | translate }}
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field appearance="fill">
-      <mat-label>{{ 'nationality' | translate }}</mat-label>
-      <mat-select formControlName="nationality" required>
-        <mat-option *ngFor="let nationality of nationalities" [value]="nationality">
-          {{ nationality }}
-        </mat-option>
-      </mat-select>
-      <mat-error *ngIf="crewForm.get('nationality')?.hasError('required')">
-        {{ 'nationality_required' | translate }}
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field appearance="fill">
-      <mat-label>{{ 'title' | translate }}</mat-label>
-      <mat-select formControlName="title" required>
-        <mat-option *ngFor="let title of titles" [value]="title">
-          {{ title }}
-        </mat-option>
-      </mat-select>
-      <mat-error *ngIf="crewForm.get('title')?.hasError('required')">
-        {{ 'title_required' | translate }}
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field appearance="fill">
-      <mat-label>{{ 'days_on_board' | translate }}</mat-label>
-      <input matInput type="number" formControlName="daysOnBoard" min="0" required>
-      <mat-error *ngIf="crewForm.get('daysOnBoard')?.hasError('required')">
-        {{ 'days_on_board_required' | translate }}
-      </mat-error>
-      <mat-error *ngIf="crewForm.get('daysOnBoard')?.hasError('min')">
-        {{ 'days_on_board_min' | translate }}
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field appearance="fill">
-      <mat-label>{{ 'daily_rate' | translate }}</mat-label>
-      <input matInput type="number" formControlName="dailyRate" min="0" required>
-      <mat-error *ngIf="crewForm.get('dailyRate')?.hasError('required')">
-        {{ 'daily_rate_required' | translate }}
-      </mat-error>
-      <mat-error *ngIf="crewForm.get('dailyRate')?.hasError('min')">
-        {{ 'daily_rate_min' | translate }}
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field appearance="fill">
-      <mat-label>{{ 'currency' | translate }}</mat-label>
-      <mat-select formControlName="currency" required>
-        <mat-option *ngFor="let currency of currencies" [value]="currency">
-          {{ currency }}
-        </mat-option>
-      </mat-select>
-      <mat-error *ngIf="crewForm.get('currency')?.hasError('required')">
-        {{ 'currency_required' | translate }}
-      </mat-error>
-    </mat-form-field>
-  </form>
-
-  <h2 mat-subheader>{{ 'add_or_edit_certificate' | translate }}</h2>
-  <form [formGroup]="certificateForm">
-    <mat-form-field appearance="fill">
-      <mat-label>{{ 'certificate' | translate }}</mat-label>
-      <mat-select formControlName="certificateId" required>
-        <mat-option *ngFor="let certificate of certificates" [value]="certificate.id">
-          {{ certificate.name }}
-        </mat-option>
-      </mat-select>
-      <mat-error *ngIf="certificateForm.get('certificateId')?.hasError('required')">
-        {{ 'certificate_required' | translate }}
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field appearance="fill">
-      <mat-label>{{ 'issue_date' | translate }}</mat-label>
-      <input matInput [matDatepicker]="issueDatePicker" formControlName="issueDate" required>
-      <mat-datepicker-toggle matSuffix [for]="issueDatePicker"></mat-datepicker-toggle>
-      <mat-datepicker #issueDatePicker></mat-datepicker>
-      <mat-error *ngIf="certificateForm.get('issueDate')?.hasError('required')">
-        {{ 'issue_date_required' | translate }}
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field appearance="fill">
-      <mat-label>{{ 'expiry_date' | translate }}</mat-label>
-      <input matInput [matDatepicker]="expiryDatePicker" formControlName="expiryDate" required>
-      <mat-datepicker-toggle matSuffix [for]="expiryDatePicker"></mat-datepicker-toggle>
-      <mat-datepicker #expiryDatePicker></mat-datepicker>
-      <mat-error *ngIf="certificateForm.get('expiryDate')?.hasError('required')">
-        {{ 'expiry_date_required' | translate }}
-      </mat-error>
-    </mat-form-field>
-    <button mat-raised-button color="primary" (click)="addOrUpdateCertificate()" [disabled]="certificateForm.invalid">
-      {{ editingCertificateIndex !== null ? ('update_certificate' | translate) : ('add_certificate' | translate) }}
-    </button>
-  </form>
-
-  <h2 mat-subheader>{{ 'certificates' | translate }}</h2>
-  <mat-list>
-    <mat-list-item *ngFor="let cert of tempCertificates; let i = index">
-      {{ cert.certificateId }} - {{ cert.issueDate }} - {{ cert.expiryDate }}
-      <button mat-icon-button color="primary" (click)="editCertificate(i)">
-        <mat-icon>edit</mat-icon>
-      </button>
-      <button mat-icon-button color="primary" (click)="removeCertificate(i)">
-        <mat-icon>delete</mat-icon>
-      </button>
-    </mat-list-item>
-  </mat-list>
+  <div class="tab-container">
+    <mat-tab-group>
+      <mat-tab label="{{ 'crew_details' | translate }}">
+        <div class="tab-content">
+          <form [formGroup]="crewForm" class="crew-form">
+            <mat-form-field appearance="fill">
+              <mat-label>{{ 'first_name' | translate }}</mat-label>
+              <input matInput formControlName="firstName" required>
+              <mat-error *ngIf="crewForm.get('firstName')?.hasError('required')">
+                {{ 'first_name_required' | translate }}
+              </mat-error>
+            </mat-form-field>
+            <mat-form-field appearance="fill">
+              <mat-label>{{ 'last_name' | translate }}</mat-label>
+              <input matInput formControlName="lastName" required>
+              <mat-error *ngIf="crewForm.get('lastName')?.hasError('required')">
+                {{ 'last_name_required' | translate }}
+              </mat-error>
+            </mat-form-field>
+            <mat-form-field appearance="fill">
+              <mat-label>{{ 'nationality' | translate }}</mat-label>
+              <mat-select formControlName="nationality" required>
+                <mat-option *ngFor="let nationality of nationalities" [value]="nationality">
+                  {{ nationality }}
+                </mat-option>
+              </mat-select>
+              <mat-error *ngIf="crewForm.get('nationality')?.hasError('required')">
+                {{ 'nationality_required' | translate }}
+              </mat-error>
+            </mat-form-field>
+            <mat-form-field appearance="fill">
+              <mat-label>{{ 'title' | translate }}</mat-label>
+              <mat-select formControlName="title" required>
+                <mat-option *ngFor="let title of titles" [value]="title">
+                  {{ title }}
+                </mat-option>
+              </mat-select>
+              <mat-error *ngIf="crewForm.get('title')?.hasError('required')">
+                {{ 'title_required' | translate }}
+              </mat-error>
+            </mat-form-field>
+            <mat-form-field appearance="fill">
+              <mat-label>{{ 'days_on_board' | translate }}</mat-label>
+              <input matInput type="number" formControlName="daysOnBoard" min="0" required>
+              <mat-error *ngIf="crewForm.get('daysOnBoard')?.hasError('required')">
+                {{ 'days_on_board_required' | translate }}
+              </mat-error>
+              <mat-error *ngIf="crewForm.get('daysOnBoard')?.hasError('min')">
+                {{ 'days_on_board_min' | translate }}
+              </mat-error>
+            </mat-form-field>
+            <mat-form-field appearance="fill">
+              <mat-label>{{ 'daily_rate' | translate }}</mat-label>
+              <input matInput type="number" formControlName="dailyRate" min="0" required>
+              <mat-error *ngIf="crewForm.get('dailyRate')?.hasError('required')">
+                {{ 'daily_rate_required' | translate }}
+              </mat-error>
+              <mat-error *ngIf="crewForm.get('dailyRate')?.hasError('min')">
+                {{ 'daily_rate_min' | translate }}
+              </mat-error>
+            </mat-form-field>
+            <mat-form-field appearance="fill">
+              <mat-label>{{ 'currency' | translate }}</mat-label>
+              <mat-select formControlName="currency" required>
+                <mat-option *ngFor="let currency of currencies" [value]="currency">
+                  {{ currency }}
+                </mat-option>
+              </mat-select>
+              <mat-error *ngIf="crewForm.get('currency')?.hasError('required')">
+                {{ 'currency_required' | translate }}
+              </mat-error>
+            </mat-form-field>
+          </form>
+        </div>
+      </mat-tab>
+      <mat-tab label="{{ 'certificates' | translate }}">
+        <div class="tab-content">
+          <h2>{{ 'certificates' | translate }}</h2>
+          <form [formGroup]="certificateForm" class="certificate-form">
+            <mat-form-field appearance="fill">
+              <mat-label>{{ 'certificate' | translate }}</mat-label>
+              <mat-select formControlName="certificateId" required>
+                <mat-option *ngFor="let certificate of certificates" [value]="certificate.id">
+                  {{ certificate.name }}
+                </mat-option>
+              </mat-select>
+              <mat-error *ngIf="certificateForm.get('certificateId')?.hasError('required')">
+                {{ 'certificate_required' | translate }}
+              </mat-error>
+            </mat-form-field>
+            <mat-form-field appearance="fill">
+              <mat-label>{{ 'issue_date' | translate }}</mat-label>
+              <input matInput [matDatepicker]="issueDatePicker" formControlName="issueDate" required>
+              <mat-datepicker-toggle matSuffix [for]="issueDatePicker"></mat-datepicker-toggle>
+              <mat-datepicker #issueDatePicker></mat-datepicker>
+              <mat-error *ngIf="certificateForm.get('issueDate')?.hasError('required')">
+                {{ 'issue_date_required' | translate }}
+              </mat-error>
+            </mat-form-field>
+            <mat-form-field appearance="fill">
+              <mat-label>{{ 'expiry_date' | translate }}</mat-label>
+              <input matInput [matDatepicker]="expiryDatePicker" formControlName="expiryDate" required>
+              <mat-datepicker-toggle matSuffix [for]="expiryDatePicker"></mat-datepicker-toggle>
+              <mat-datepicker #expiryDatePicker></mat-datepicker>
+              <mat-error *ngIf="certificateForm.get('expiryDate')?.hasError('required')">
+                {{ 'expiry_date_required' | translate }}
+              </mat-error>
+            </mat-form-field>
+            <button mat-raised-button color="primary" class="add-certificate-button" (click)="addOrUpdateCertificate()" [disabled]="certificateForm.invalid">
+              {{ editingCertificateIndex !== null ? ('update_certificate' | translate) : ('add_certificate' | translate) }}
+            </button>
+          </form>
+          <div class="certificate-list">
+            <div *ngFor="let cert of tempCertificates; let i = index" class="certificate-list-item">
+              <div class="certificate-info">
+                <span>{{ getCertificateName(cert.certificateId) }}</span>
+              </div>
+              <div class="certificate-actions">
+                <button class="edit-button" (click)="editCertificate(i)">Edit</button>
+                <button class="delete-button" (click)="removeCertificate(i)">Delete</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </mat-tab>
+    </mat-tab-group>
+  </div>
 </div>
 <div mat-dialog-actions>
-  <button mat-button (click)="onCancel()">{{ 'cancel' | translate }}</button>
-  <button mat-button color="primary" (click)="onSave()" [disabled]="crewForm.invalid">{{ 'save' | translate }}</button>
+  <button mat-button class="cancel-button" (click)="onCancel()">{{ 'cancel' | translate }}</button>
+  <button mat-button color="primary" class="save-button" (click)="onSave()" [disabled]="crewForm.invalid">{{ 'save' | translate }}</button>
 </div>
