--- a/src/app/home/crew-list/crew-list.component.scss
+++ b/src/app/home/crew-list/crew-list.component.scss
@@ -66,3 +66,9 @@ table {
   .crew-card-icon {
     color: rgb(0, 140, 255);
   }
+
+  .mat-elevation-z8 {
+    border-radius: 20px;
+    overflow: hidden;
+    border: 3px solid #2980b9;
+  }
